# plexus

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATIONS.md  LICENSE  README.md  data.json  demo.ipynb  design_tutorial.ipynb  environment.yml  main.py  primer3_test.ipynb  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: alignment_parameters.json  designer_default_config.json  designer_lenient_config.json  environment.yml
config/nn_model/: single_mismatch.json
data/: design_regions.csv  genome.fa  junctions.csv
docker/: DOCKERFILE
docs/: COMPLIANCE_GUIDE.md  IMPLEMENTATION.md  ROADMAP.md  USER_GUIDE.md  design_tutorial.ipynb  getting_started.ipynb  primer3_test.ipynb  run_pipeline.ipynb  user_guide.md
multiplexdesigner/: archive.py  blastn.py  in_silico_pcr.py  multiplex_designer.py  primer3_port.py  primer_three.py  utils.py
multiplexdesigner/designer/: design.py  multiplexpanel.py  primer.py  thal.py
multiplexdesigner/utils/: utils.py
scripts/: create_test_fixtures.py
src/: hello.c  setup.py
src/multiplexdesigner/: __init__.py  cli.py  config.py  logging.py  orchestrator.py  pipeline.py
src/multiplexdesigner/aligner/: __init__.py  align.py
src/multiplexdesigner/blast/: annotator.py  blast_runner.py  in_silico_pcr.py  main.py  offtarget_finder.py
src/multiplexdesigner/designer/: design.py  main.py  multiplexpanel.py  primer.py  thal.py
src/multiplexdesigner/selector/: module_3_optimiser.py  selectors.py
src/multiplexdesigner/snpcheck/: snpcheck.py
src/multiplexdesigner/utils/: archive.py  root_dir.py  utils.py
src/plexus/: cli.py  config.py  orchestrator.py  pipeline.py  resources.py
src/plexus/aligner/: align.py
src/plexus/blast/: annotator.py  blast_runner.py  offtarget_finder.py  specificity.py
src/plexus/data/: alignment_parameters.json  compliance_manifest.json  designer_default_config.json  designer_lenient_config.json
src/plexus/data/nn_model/: match.json
src/plexus/designer/: design.py  multiplexpanel.py  primer.py  thal.py
src/plexus/reporting/: html_report.py  qc.py
src/plexus/reporting/templates/: panel_report.html.j2
src/plexus/selector/: cost.py  selectors.py
src/plexus/snpcheck/: __init__.py  checker.py  ensembl.py  resources.py  snp_data.py
src/plexus/utils/: archive.py  env.py  utils.py
tests/: conftest.py  test_aligner.py  test_blast_annotator.py  test_blast_runner.py  test_blast_specificity.py  test_cli.py  test_config.py  test_cost.py  test_design.py  test_env.py  test_integration.py  test_multiplexpanel.py  test_offtarget_finder.py  test_orchestrator.py  test_pipeline.py  test_primer.py  test_reporting_html.py  test_reporting_qc.py  test_resources.py  test_selector.py  test_snpcheck.py  test_thal.py
tests/data/: fixtures.fa  fixtures.fa.fai  fixtures.ndb  fixtures.nhr  fixtures.nin  fixtures.njs  fixtures.nos  fixtures.nsq  junctions.csv  snps.vcf.gz.tbi
