[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multiplexdesigner"
dynamic = ["version"]
description = "Package for designing multiplex PCR panels"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Stefan Filges", email = "stefan@simsendiagnostics.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "biopython",
    "ispcr",
    "loguru",
    "pandas",
    "primer3-py",
    "pydantic",
    "pysam",
    "rich",
    "typer",
    "multiply @ git+https://github.com/JasonAHendry/multiply.git",
]

[project.scripts]
multiplexdesigner = "multiplexdesigner.cli:app"

[project.urls]
Homepage = "https://github.com/sfilges/multiplexDesigner"
Repository = "https://github.com/sfilges/multiplexDesigner"

[project.optional-dependencies]
dev = ["mypy", "pre-commit", "pytest", "pytest-cov", "ruff"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "src/multiplexdesigner/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/multiplexdesigner"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=multiplexdesigner --cov-report=term-missing"
testpaths = ["tests"]
