[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plexus"
dynamic = ["version"]
description = "Package for designing multiplex PCR panels"
readme = "README.md"
license = "GPL-2.0-or-later"
requires-python = ">=3.10,<3.14"
authors = [{ name = "Stefan Filges", email = "stefan.filges@pm.me" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "loguru",
    "pandas",
    "primer3-py",
    "pydantic",
    "pysam",
    "rich",
    "typer",
]

[project.scripts]
plexus = "plexus.cli:app"

[project.urls]
Homepage = "https://github.com/sfilges/plexus"
Repository = "https://github.com/sfilges/plexus"

[project.optional-dependencies]
dev = ["mypy", "pre-commit", "pytest", "pytest-cov", "ruff"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "src/plexus/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/plexus"]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = ["*.ipynb", "data"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["plexus"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=plexus --cov-report=term-missing"
testpaths = ["tests"]
markers = ["integration: end-to-end integration tests (may be slow)"]
